src/objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Business_Context__c</fullName>
        <label>Business Context</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Idea_Stakeholder__c</fullName>
        <label>Idea Stakeholder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Modified_Date__c</fullName>
        <description>Date the status was modified</description>
        <label>Status Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Product_Imperatives__c</fullName>
        <label>Strategic Product Imperatives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Content Competency</fullName>
                </value>
                <value>
                    <fullName>Educational Outcomes Measurement</fullName>
                </value>
                <value>
                    <fullName>Community Discussion</fullName>
                </value>
                <value>
                    <fullName>Database and User Segmentation</fullName>
                </value>
                <value>
                    <fullName>Multi-Channel Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ideas - 2nd Related Opportunity</relationshipLabel>
        <relationshipName>Ideas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>3rd Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Ideas - 3rd Related Opportunity</relationshipLabel>
        <relationshipName>Ideas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Ideas</label>
    </listViews>
    <listViews>
        <fullName>Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>*School Channel: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a60000000CjQTAA0_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Financial Education: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a60000000CjR2AAK_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Education Debt Management Services: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a60000000CjR7AAK_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Competitor Intel: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a60000000CjRCAA0_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>Campus Activation: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Categories_Is_Required_Field</fullName>
        <active>true</active>
        <description>Categories is a Required Field</description>
        <errorConditionFormula>ISNULL (Categories)</errorConditionFormula>
        <errorMessage>Please select a category.</errorMessage>
    </validationRules>
</CustomObject>